fix icon alignment for chrome64

--- a/assets/sass/components/_header-search.scss
+++ b/assets/sass/components/_header-search.scss
@@ -35,6 +35,7 @@
 		position: absolute;
 	    right: 60px;
 	    z-index: 151;
+	    align-self: inherit;
 
     	.path {
     		stroke: white;
